@@ -1,3 +1,10 @@
+2007-12-19  Alexander Larsson  <alexl@redhat.com>
+
+        * gunionvolumemonitor.c:
+	Store the native type as GType, not class so that
+	we can unload it. But still avoid unnecessarily
+	unload modules.
+
 2007-12-19  David Zeuthen  <davidz@redhat.com>
 
 	Introduce g_volume_monitor_adopt_orphan_mount() function. Also
